--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
     "ffmpeg-static": "^5.3.0",
-    "sodium-native": "^5.0.10"
+    "sodium-native": "^5.0.10",
+    "turbocommons-ts": "^3.12.0"
   },
   "devDependencies": {
     "@types/node": "^25.1.0",
