--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "dotenv": "^17.2.3",
     "ffmpeg-static": "^5.3.0",
     "sodium-native": "^5.0.10",
-    "string-similarity-js": "^2.1.4",
-    "turbocommons-ts": "^3.12.0"
+    "string-similarity-js": "^2.1.4"
   },
   "devDependencies": {
     "@types/node": "^25.1.0",
